--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.madproject">
-     <uses-permission android:name="android.permission.INTERNET"/>
+    package="com.example.madproject" >
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MAdProject">
-        <activity android:name=".Caterer_Register"></activity>
+        android:theme="@style/Theme.MAdProject" >
+        <activity android:name=".ForgotPassword" >
+        </activity>
+        <activity android:name=".Caterer_Register" />
         <activity android:name=".Login_Page" />
         <activity android:name=".User_Register" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
